[gd_scene load_steps=4 format=3 uid="uid://enemy_scene"]

[ext_resource type="Script" path="res://scripts/Enemy.gd" id="1_enemy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(30, 40)

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 100.0

[node name="Enemy" type="CharacterBody2D" groups=["enemies"]]
script = ExtResource("1_enemy")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.533333, 0, 1)
scale = Vector2(1.5, 1.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_1")

[node name="HealthBar" type="ProgressBar" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -50.0
offset_right = 15.0
offset_bottom = -40.0
max_value = 50.0
value = 50.0

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_1")

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D3" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("RectangleShape2D_1")